linux/driver/tmp/3.13.0-45-generic/blk_queue_ordered=3.log
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/blk_queue_ordered=3.E.c -E /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_ordered=3.c
+ gcc -Os -isystem /lib/modules/3.13.0-45-generic/build/include -isystem /lib/modules/3.13.0-45-generic/build/include/uapi -isystem /lib/modules/3.13.0-45-generic/build/arch/x86/include/generated -I /lib/modules/3.13.0-45-generic/build/arch/x86/include -Wall -Werror -Werror-implicit-function-declaration -DKBUILD_BASENAME= -include generated/autoconf.h -o tmp/3.13.0-45-generic/blk_queue_ordered=3.o -c /home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_ordered=3.c
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_ordered=3.c: In function ‘foo’:
/home/sgosali/Documents/Work/RHEL6xFLASH/linux/driver/../kabi/tests/blk_queue_ordered=3.c:9:2: error: implicit declaration of function ‘blk_queue_ordered’ [-Werror=implicit-function-declaration]
  return blk_queue_ordered(q, 0, 0);
  ^
cc1: all warnings being treated as errors
